# backward_ros_reproducer

./: CMakeLists.txt  package.xml
src/: segfault_node.cpp
